# PredictStarNumberHelper

./: .gitignore  README.md  image_maker.py  main.py  model.onnx  model.pickle  pyproject.toml  requirements.txt  version.txt
.github/workflows/: keep_active.yml  main.yml
