[project]
name = "predictstarnumberhelper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rakkyo150", email = "86054813+rakkyo150@users.noreply.github.com" }
]
dependencies = [
    "matplotlib>=3.9.1.post1",
    "numpy<2",
    "onnx>=1.16.2",
    "onnxruntime>=1.18.1",
    "pandas>=2.2.2",
    "requests>=2.32.3",
    "scikit-learn>=1.5.1",
    "seaborn>=0.13.2",
    "skl2onnx>=1.17.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/predictstarnumberhelper"]
