[project]
name = "predictstarnumberhelper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rakkyo150", email = "86054813+rakkyo150@users.noreply.github.com" }
]
dependencies = [
    "matplotlib>=3.9.1.post1,<3.10.0",
    "numpy<2",
    "onnx==1.17.0",
    "onnxruntime==1.13.1",
    "pandas>=2.2.2,<2.3.0",
    "requests>=2.32.3,<2.33.0",
    "scikit-learn>=1.1.1,<1.7.0",
    "seaborn>=0.13.2,<0.14.0",
    "skl2onnx==1.13",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/predictstarnumberhelper"]
