[project]
name = "predictstarnumberhelper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rakkyo150", email = "86054813+rakkyo150@users.noreply.github.com" }
]
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.3.3",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.1",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "skl2onnx>=1.19.1",
]
readme = "README.md"
requires-python = ">= 3.13"
